complete top skills card

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/app.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/vendor.css">
+    <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/js/raphael.min.js"></script>
+    <script src="%PUBLIC_URL%/js/morris.min.js"></script>
     <title>EmployMe v1.0.0</title>
   </head>
   <body>
